@@ -18,9 +18,9 @@ FOBJ	= 8svx.obj adpcm.obj aiff.obj alsa.obj au.obj auto.obj avr.obj cdr.obj \
 
 EOBJ	= avg.obj band.obj bandpass.obj breject.obj btrworth.obj chorus.obj \
 	  compand.obj copy.obj cut.obj deemphas.obj echo.obj \
-	  echos.obj filter.obj flanger.obj highp.obj highpass.obj lowp.obj \
-          lowpass.obj map.obj mask.obj phaser.obj pick.obj pitch.obj pan.obj \
-	  polyphase.obj rate.obj resample.obj reverb.obj \
+	  echos.obj fade.obj filter.obj flanger.obj highp.obj highpass.obj \
+          lowp.obj lowpass.obj map.obj mask.obj phaser.obj pick.obj \
+	  pitch.obj pan.obj polyphase.obj rate.obj resample.obj reverb.obj \
 	  reverse.obj speed.obj split.obj stat.obj stretch.obj \
 	  swap.obj trim.obj vibro.obj vol.obj
 
